applied day.js to the thoughts odel. Aldo updated the user model

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/liamok19/socialNetwork#readme",
   "dependencies": {
+    "dayjs": "^1.11.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.10",
     "validator": "^13.7.0"
